k8s/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amc-py-agent-ediauto
  namespace: qa
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: py-agent-ediauto-qa-private.msa.amcglobalco.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amc-py-agent-ediauto
                port:
                  number: 8080
